--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "kwic\\lib\\junit-platform-engine-1.10.1.jar",
         "kwic\\lib\\opentest4j-1.3.0.jar",
         "kwic\\lib\\pdfbox-3.0.1.jar",
-        "kwic\\lib\\pdfbox-io-3.0.1.jar"
+        "kwic\\lib\\pdfbox-io-3.0.1.jar",
+        "c:\\Users\\josek\\Desktop\\Path Finding.jar"
     ]
 }
