--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 AffectiveComputingAI/training/*.jpeg
+CNN-aves/test/*.jpeg
+CNN-aves/train/*.jpeg
+CNN-aves/val/*.jpeg
+CNN-aves/test/*.jpg
+CNN-aves/train/*.jpg
+CNN-aves/val/*.jpg
 AffectiveComputingAI/affective_dataset.csv
 AffectiveComputingAI/affective_dataset.pkl
+*.h5
+*.hdf5
+*.pkl
+*.csv
+*.jpeg
+*.jpg
+*.png
+*.gif
+*.mp4
+*.v2
+*.xls
